# GrainPy

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  requirements_dev.txt  setup.cfg  setup.py  tox.ini
GrainPy/: __init__.py  cli.py  grainclass.py  grainpy.py  util.py
SampleData/: FS21_001.xlsx  FS21_002.xlsx  FS21_003.xlsx  FS21_004.xlsx  FS21_005_05.xlsx  FS21_005_1.xlsx  FS21_007.xlsx  FS21_008_02.xlsx  FS21_008_1.xlsx  FS21_009.xlsx  FS21_010.xlsx  FS21_011.xlsx  FS21_012.xlsx  FS21_013.xlsx  FS21_014.xlsx  FS21_015.xlsx  FS21_016.xlsx  FS21_017.xlsx  ab21-001.xlsx  ab21-002.xlsx  ab21-004.xlsx  ab21-005.xlsx  ab21-008.xlsx  ab21-009.xlsx  ab21-013.xlsx  ab21-015.xlsx  ab21-017.xlsx  ab21-018.xlsx  ab21-019.xlsx  ab21-020.xlsx  ab21-023.xlsx  ab21-025.xlsx  ab21-026.xlsx  ab21-028.xlsx  ab21-032.xlsx  ab21-033.xlsx  ab21-034.xlsx  ab21-035.xlsx  ab21-036.xlsx  ab21-037.xlsx  (+20 more)
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/installation/: installation.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/roadmap/: contributions.rst  roadmap.rst
docs/starting/: fundamentals.rst  install.rst
docs/tutorials/: classify.rst  fundamentals.rst  object.rst  plots.rst  stats.rst  util.rst
grainpy/: __init__.py  grainclass.py  grainpy.py  util.py
grainpy/grainpy/: classify.py  grainsize.py  util.py
tests/: __init__.py  test_grainpy.py
(+36 files in other folders)
