[metadata]
name = grainpy
version = 0.1.0
author = Matt Massey
author_email = mamass1@g.uky.edu
description = Python package for compiling, analyzing, visualizing, and interpreting grain size distribution data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/masseygeo/GrainPy
project_urls =
    Bug Tracker = https://github.com/masseygeo/GrainPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = grainpy
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
    matplotlib
    scipy
    openpyxl

[options.packages.find]
where = grainpy